src/objects/Collaborative_Goal__c.object
<CustomObject>
    <fields>
        <fullName>Collaborative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collaborative</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Collaborative</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Collaborative Goals</relationshipLabel>
        <relationshipName>Collaborative_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Completion__c</fullName>
        <label>Expected Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mental_Models__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mental Models</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_High_Actions_Completed__c</fullName>
        <label>Number High Actions Completed</label>
        <summaryFilterItems>
            <field>Collaborative_Action__c.Weight__c</field>
            <operation>equals</operation>
            <value>High</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Collaborative_Action__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Collaborative_Action__c.Goal__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_High_Actions__c</fullName>
        <label>Number High Actions</label>
        <summaryFilterItems>
            <field>Collaborative_Action__c.Weight__c</field>
            <operation>equals</operation>
            <value>High</value>
        </summaryFilterItems>
        <summaryForeignKey>Collaborative_Action__c.Goal__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_Low_Actions_Completed__c</fullName>
        <label>Number Low Actions Completed</label>
        <summaryFilterItems>
            <field>Collaborative_Action__c.Weight__c</field>
            <operation>equals</operation>
            <value>Low</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Collaborative_Action__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Collaborative_Action__c.Goal__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_Low_Actions__c</fullName>
        <label>Number Low Actions</label>
        <summaryFilterItems>
            <field>Collaborative_Action__c.Weight__c</field>
            <operation>equals</operation>
            <value>Low</value>
        </summaryFilterItems>
        <summaryForeignKey>Collaborative_Action__c.Goal__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Percentage_Complete__c</fullName>
        <formula>IF((Number_Low_Actions__c + (Number_High_Actions__c * 3)) &lt;= 0,
0,
(Number_Low_Actions_Completed__c + (Number_High_Actions_Completed__c * 3)) / (Number_Low_Actions__c + (Number_High_Actions__c * 3)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percentage Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Policies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Policies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Power_Dynamics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Power Dynamics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Practices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Practices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationships_Connections__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Relationships &amp; Connections</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resource_Flows__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resource Flows</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF((Number_High_Actions__c + Number_Low_Actions__c) = 0, &quot;Not Started&quot;, IF(Percentage_Complete__c = 100, &quot;Complete&quot;, &quot;In Progress&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Why__c</fullName>
        <description>Provide a reason for why you are creating this goal</description>
        <inlineHelpText>Provide a reason for why you are creating this goal</inlineHelpText>
        <label>Why</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c501_Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c501_In_Progress_Date__c</fullName>
        <label>In Progress Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c501_Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Collaborative Goal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Collaborative__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Percentage_Complete__c</columns>
        <columns>Expected_Completion__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Goal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collaborative Goals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>